--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "start": "npx tsc && node dist/tasklist/app.js | npx pino-pretty",
+    "start:consumer": "npx tsc && node dist/tasklist/consumer.js | npx pino-pretty",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +13,8 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "express": "^4.21.1",
     "inversify": "^6.1.4",
     "mongoose": "^8.8.2",
